Use java 20 as release in Maven POM. Minor changes/fixes.